Creating the base.html file

--- a/templates/contato.html
+++ b/templates/contato.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block body %}
     <h1>Qualquer dúvida entre em contato pelo e-mail: renatodasilvamaldonado@gmail.com</h1>
-</body>
-</html>
+{% endblock %}
