Creation of usuarios.html and navbar.html files

--- a/templates/contato.html
+++ b/templates/contato.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-    <h1>Qualquer dúvida entre em contato pelo e-mail: renatodasilvamaldonado@gmail.com</h1>
+    <div class="container">
+        <h1>Qualquer dúvida entre em contato pelo e-mail: renatodasilvamaldonado@gmail.com</h1>
+    </div>
 {% endblock %}
