--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-    <h1>Hello, World!</h1>
+    <div class="container">
+        <h1>Hello, World!</h1>
+    </div>
 {% endblock %}
