--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,11 @@
       <div class="row">
         <div class="col">
           <h1>Login</h1>
+            {{ form_login }}
         </div>
         <div class="col">
           <h1>Criar Conta</h1>
+            {{ form_criar_conta }}
         </div>
       </div>
     </div>
