Created the forms in the login.html file

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,55 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <div class="container text-center">
+    <div class="container">
+      <h1>Faça Login ou Crie a Sua Conta Para Continuar</h1>
+      <hr>
       <div class="row">
         <div class="col">
-          <h1>Login</h1>
-            {{ form_login }}
+          <form method="POST" action="" class="border p-4 mt-2">
+            <legend><strong>Login</strong></legend>
+              <fieldset>
+                <div class="form-group">
+                  {{ form_login.email.label(class="form-control-label") }}
+                  {{ form_login.email(class="form-control") }}
+                </div>
+                <div class="form-group">
+                  {{ form_login.senha.label(class="form-control-label") }}
+                  {{ form_login.senha(class="form-control") }}
+                </div>
+                <div class="form-group">
+                  {{ form_login.lembrar.label(class="form-check-input-label") }}
+                  {{ form_login.lembrar(class="form-check-input") }}
+                </div>
+              </fieldset>
+            {{ form_login.submit_login(class="btn btn-primary mt-2") }}
+          </form>
         </div>
+
         <div class="col">
-          <h1>Criar Conta</h1>
-            {{ form_criar_conta }}
+          <form method="POST" action="" class="border p-4 mt-2">
+            <legend><strong>Criar Conta</strong></legend>
+              <fieldset>
+                <div class="form-group">
+                  {{ form_criar_conta.username.label(class="form-control-label") }}
+                  {{ form_criar_conta.username(class="form-control") }}
+                </div>
+                <div class="form-group">
+                  {{ form_criar_conta.email.label(class="form-control-label") }}
+                  {{ form_criar_conta.email(class="form-control") }}
+                </div>
+                <div class="form-group">
+                  {{ form_criar_conta.senha.label(class="form-control-label") }}
+                  {{ form_criar_conta.senha(class="form-control") }}
+                </div>
+                <div class="form-group">
+                  {{ form_criar_conta.confirmacao.label(class="form-control-label") }}
+                  {{ form_criar_conta.confirmacao(class="form-control") }}
+                </div>
+              </fieldset>
+            {{ form_criar_conta.submit_criar_conta(class="btn btn-primary mt-2") }}
+          </form>
         </div>
       </div>
     </div>
 {% endblock %}
-
