--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
       <div class="row">
         <div class="col">
           <form method="POST" action="" class="border p-4 mt-2">
+            {{ form_login.csrf_token }}
             <legend><strong>Login</strong></legend>
               <fieldset>
                 <div class="form-group">
@@ -28,6 +29,7 @@
 
         <div class="col">
           <form method="POST" action="" class="border p-4 mt-2">
+            {{ form_criar_conta.csrf_token }}
             <legend><strong>Criar Conta</strong></legend>
               <fieldset>
                 <div class="form-group">
