--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
     {% include 'navbar.html' %}
 
-    <div class="container">
+    <div class="container p-2">
         {% with mensagens = get_flashed_messages(with_categories=True) %}
             {% if mensagens %}
                 {% for categoria, mensagem in mensagens %}
