--- a/templates/login.html
+++ b/templates/login.html
@@ -12,11 +12,29 @@
               <fieldset>
                 <div class="form-group">
                   {{ form_login.email.label(class="form-control-label") }}
-                  {{ form_login.email(class="form-control") }}
+                  {% if form_login.email.errors %}
+                    {{ form_login.email(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form_login.email.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form_login.email(class="form-control") }}
+                  {% endif %}
                 </div>
                 <div class="form-group">
                   {{ form_login.senha.label(class="form-control-label") }}
-                  {{ form_login.senha(class="form-control") }}
+                  {% if form_login.senha.errors %}
+                    {{ form_login.senha(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form_login.senha.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form_login.senha(class="form-control") }}
+                  {% endif %}
                 </div>
                 <div class="form-group">
                   {{ form_login.lembrar.label(class="form-check-input-label") }}
@@ -34,19 +52,55 @@
               <fieldset>
                 <div class="form-group">
                   {{ form_criar_conta.username.label(class="form-control-label") }}
-                  {{ form_criar_conta.username(class="form-control") }}
+                  {% if form_criar_conta.username.errors %}
+                    {{ form_criar_conta.username(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form_criar_conta.username.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form_criar_conta.username(class="form-control") }}
+                  {% endif %}
                 </div>
                 <div class="form-group">
                   {{ form_criar_conta.email.label(class="form-control-label") }}
-                  {{ form_criar_conta.email(class="form-control") }}
+                  {% if form_criar_conta.email.errors %}
+                    {{ form_criar_conta.email(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form_criar_conta.email.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form_criar_conta.email(class="form-control") }}
+                  {% endif %}
                 </div>
                 <div class="form-group">
                   {{ form_criar_conta.senha.label(class="form-control-label") }}
-                  {{ form_criar_conta.senha(class="form-control") }}
+                  {% if form_criar_conta.senha.errors %}
+                    {{ form_criar_conta.senha(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form_criar_conta.senha.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form_criar_conta.senha(class="form-control") }}
+                  {% endif %}
                 </div>
                 <div class="form-group">
                   {{ form_criar_conta.confirmacao.label(class="form-control-label") }}
-                  {{ form_criar_conta.confirmacao(class="form-control") }}
+                  {% if form_criar_conta.confirmacao.errors %}
+                    {{ form_criar_conta.confirmacao(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form_criar_conta.confirmacao.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form_criar_conta.confirmacao(class="form-control") }}
+                  {% endif %}
                 </div>
               </fieldset>
             {{ form_criar_conta.submit_criar_conta(class="btn btn-primary mt-2") }}
