--- a/community/templates/perfil.html
+++ b/community/templates/perfil.html
@@ -5,7 +5,7 @@
             <div class="card p-3">
                 <div class="d-flex align-items-center">
                     <div class="image pe-2">
-                <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" class="rounded" width="200" >
+                <img src="{{ foto_perfil }}" class="rounded" width="200" >
                 </div>
                 <div class="ml-3 w-100">
                    <h4 class="mb-0 mt-0">{{ current_user.username }}</h4>
