Profile photo editing functions

--- a/community/templates/editarperfil.html
+++ b/community/templates/editarperfil.html
@@ -4,7 +4,7 @@
       <hr>
       <div class="row">
         <div class="col">
-          <form method="POST" action="" class="border p-4 mt-2">
+          <form method="POST" action="" class="border p-4 mt-2" enctype="multipart/form-data">
             {{ form.csrf_token }}
             <legend><strong>Editar Perfil</strong></legend>
               <fieldset>
@@ -34,8 +34,17 @@
                   {% else %}
                     {{ form.email(class="form-control") }}
                   {% endif %}
+                </div><br>
+                <div class="form-group">
+                  {{ form.foto_perfil.label }}
+                  {{ form.foto_perfil(class="form-control-file") }}
+                  {% if form.foto_perfil.errors %}
+                    {% for erro in form.foto_perfil.errors %}
+                      <span class="alert-danger">{{ erro }}</span><br>
+                    {% endfor %}
+                  {% endif %}
                 </div>
-              </fieldset>
+              </fieldset><br>
             {{ form.submit_perfil(class="btn btn-primary mt-2") }}
           </form>
         </div>
