--- a/community/templates/perfil.html
+++ b/community/templates/perfil.html
@@ -11,10 +11,17 @@
                    <h4 class="mb-0 mt-0">{{ current_user.username }}</h4>
                    <span>{{ current_user.email }}</span>
                    <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
-                    <div class="d-flex flex-column">
-                        <span class="articles">Habilidades</span>
-                        <span class="number1">0</span>
-                    </div>
+                        {% if 'Não informado' in current_user.habilidades %}
+                            <div class="d-flex flex-column">
+                               <span class="articles">Habilidades</span>
+                               <span class="number1">0</span>
+                            </div>
+                        {% else %}
+                            <div class="d-flex flex-column">
+                               <span class="articles">Habilidades</span>
+                               <span class="number1">{{ current_user.habilidades.count(';') + 1 }}</span>
+                            </div>
+                        {% endif %}
                     <div class="d-flex flex-column">
                         <span class="rating">Posts</span>
                         <span class="number3">0</span>
@@ -29,6 +36,17 @@
                 </div>
             </div>
          </div>
+<br>
+<div class="row justify-content-center">
+    <div class="col-4" style="text-align: center">
+        <strong>Habilidades</strong><br>
+        {% for habilidade in current_user.habilidades.split(';') %}
+        <button type="button" class="btn btn-success mt-2" disabled>{{ habilidade }}</button>
+        {% endfor %}
+    </div>
+</div>
+
+
 {% block form_editar_perfil %}
 {% endblock %}
 {% endblock %}
