User list settings

--- a/community/templates/usuarios.html
+++ b/community/templates/usuarios.html
@@ -4,7 +4,44 @@
     <div class="container">
         <h1>Usuários</h1>
         {% for user in user_list %}
-        <p><strong>{{ user }}</strong></p>
+         <div class="container mt-5 d-flex justify-content-left">
+            <div class="card p-3">
+                <div class="d-flex align-items-center">
+                    <div class="image pe-2">
+                        <img src="{{ url_for('static', filename='fotos_perfil/{}'.format(user.foto_perfil)) }}" class="rounded" width="200" >
+                    </div>
+                    <div class="ml-3 w-100">
+                       <h4 class="mb-0 mt-0">{{ user.username }}</h4>
+                       <span>{{ user.email }}</span>
+                       <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
+                            {% if 'Não informado' in user.habilidades %}
+                                <div class="d-flex flex-column">
+                                   <span class="articles">Habilidades</span>
+                                   <span class="number1">0</span>
+                                </div>
+                            {% else %}
+                                <div class="d-flex flex-column">
+                                   <span class="articles">Habilidades</span>
+                                   <span class="number1">{{ user.habilidades.count(';') + 1 }}</span>
+                                </div>
+                            {% endif %}
+                            <div class="d-flex flex-column">
+                                <span class="rating">Posts</span>
+                                <span class="number3">0</span>
+                            </div>
+                       </div>
+                    </div>
+                </div>
+            </div>
+         </div>
+         <div class="row justify-content-left">
+            <div class="col" style="text-align: left">
+                <strong>Habilidades</strong><br>
+                {% for habilidade in user.habilidades.split(';') %}
+                <button type="button" class="btn btn-success mt-2" disabled>{{ habilidade }}</button>
+                {% endfor %}
+            </div>
+         </div>
         <hr>
         {% endfor %}
     </div>
