--- a/community/templates/editarperfil.html
+++ b/community/templates/editarperfil.html
@@ -1,6 +1,7 @@
 {% extends 'perfil.html' %}
 
 {% block form_editar_perfil %}
+<div class="container">
       <hr>
       <div class="row">
         <div class="col">
@@ -59,4 +60,5 @@
           </form>
         </div>
       </div>
+</div>
 {% endblock %}
