--- a/community/templates/criarpost.html
+++ b/community/templates/criarpost.html
@@ -2,6 +2,43 @@
 
 {% block body %}
     <div class="container">
-        <h1>Criar Post</h1>
+      <div class="row">
+        <div class="col">
+          <form method="POST" action="" class="border p-4 mt-2">
+            {{ form.csrf_token }}
+            <legend><strong>Criar Post</strong></legend>
+              <fieldset>
+                <div class="form-group">
+                  {{ form.titulo.label(class="form-control-label") }}
+                  {% if form.titulo.errors %}
+                    {{ form.titulo(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form.titulo.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form.titulo(class="form-control") }}
+                  {% endif %}
+                </div>
+                
+                <div class="form-group">
+                  {{ form.descricao.label(class="form-control-label") }}
+                  {% if form.descricao.errors %}
+                    {{ form.descricao(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form.descricao.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form.descricao(class="form-control") }}
+                  {% endif %}
+                </div>
+              </fieldset><br>
+            {{ form.submit_post(class="btn btn-primary mt-2") }}
+          </form>
+        </div>
+      </div>
     </div>
 {% endblock %}
