--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -1,7 +1,23 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <div class="container">
-        <h1>Hello, World!</h1>
+    <div class="container mt-3">
+        <h1 style="color: red">Comunidade | Devs</h1>
+        <h2>Desenvolvimento de um projeto para uma comunidade de desenvolvedores!</h2>
+        <hr>
+        {% for post in posts %}
+        <div class="row border mt-4 p-2 meupost">
+            <div class="col col-3">
+                <div class="image pe-2">
+                    <img src="{{ foto_perfil }}" class="rounded" width="200" >
+                </div>
+            </div>
+            <div class="col col-9">
+                <h3>{{ post.titulo }}</h3>
+                <p>{{ post.descricao }}</p>
+            </div>
+
+        </div>
+        {% endfor %}
     </div>
 {% endblock %}
