--- a/community/templates/post.html
+++ b/community/templates/post.html
@@ -2,10 +2,6 @@
 
 {% block body %}
     <div class="container mt-3">
-        <h1 style="color: purple">Comunidade | Devs</h1>
-        <h2>Desenvolvimento de um projeto para uma comunidade de desenvolvedores!</h2>
-        <hr>
-        {% for post in posts %}
         <div class="row border mt-4 p-2 meupost">
             <div class="col col-3">
                 <div class="image pe-2">
@@ -20,10 +16,9 @@
             </div>
 
             <div class="col col-9">
-                <a style="text-decoration: none" href="{{ url_for('exibir_post', post_id=post.id) }}"><h3>{{ post.titulo }}</h3></a>
+                <h3>{{ post.titulo }}</h3>
                 <p>{{ post.descricao }}</p>
             </div>
         </div>
-        {% endfor %}
     </div>
 {% endblock %}
