Inserting time and date in the post and settings for post deletion

--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container mt-3">
-        <h1 style="color: purple">Comunidade | Devs</h1>
+        <h1 style="color: purple">Comunidade | Devs-17</h1>
         <h2>Desenvolvimento de um projeto para uma comunidade de desenvolvedores!</h2>
         <hr>
         {% for post in posts %}
