--- a/community/templates/post.html
+++ b/community/templates/post.html
@@ -16,9 +16,80 @@
             </div>
 
             <div class="col col-9">
-                <h3>{{ post.titulo }}</h3>
+                <h3>{{ post.titulo }}
+                    <small class="text-muted" style="font-size: 15px">| Data de Criação: {{ post.data_criacao.strftime('%d/%m/%Y') }}
+                    {% if form %}
+                        | <a href="#form_editarpost">Editar Post</a> | <a href="#" class="text-danger" data-bs-toggle="modal" data-bs-target="#excluirPost">Excluir Post</a>
+                    {% endif %}
+                    </small>
+                </h3>
                 <p>{{ post.descricao }}</p>
             </div>
         </div>
     </div>
+
+{% if form %}
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <form method="POST" action="" id="form_editarpost" class="border p-4 mt-2">
+            {{ form.csrf_token }}
+            <legend><strong>Editar Post</strong></legend>
+              <fieldset>
+                <div class="form-group">
+                  {{ form.titulo.label(class="form-control-label") }}
+                  {% if form.titulo.errors %}
+                    {{ form.titulo(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form.titulo.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form.titulo(class="form-control") }}
+                  {% endif %}
+                </div>
+
+                <div class="form-group">
+                  {{ form.descricao.label(class="form-control-label") }}
+                  {% if form.descricao.errors %}
+                    {{ form.descricao(class="form-control is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for erro in form.descricao.errors %}
+                      {{ erro }}
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form.descricao(class="form-control") }}
+                  {% endif %}
+                </div>
+              </fieldset><br>
+            {{ form.submit_post(class="btn btn-primary mt-2") }}
+          </form>
+        </div>
+      </div>
+    </div>
+{% endif %}
+
+<!-- Modal -->
+<div class="modal fade" id="excluirPost" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Excluir Post</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Você quer realmente excluir este post? Esta ação não pode ser desfeita!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <form method="POST" action="{{ url_for('excluir_post', post_id=post.id) }}">
+              <button type="submit" class="btn btn-danger">Excluir Post</button>
+          </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
