--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container mt-3">
         <h1 style="color: purple">Comunidade | Devs-17</h1>
-        <h2>Desenvolvimento de um projeto para uma comunidade de desenvolvedores!</h2>
+        <h2>Amigos e experts do time 17 reunidos num único objetivo</h2>
         <hr>
         {% for post in posts %}
         <div class="row border mt-4 p-2 meupost">
